# hyperspy_gui_traitsui

./: .travis.yml  CHANGES.md  CHANGES.rst  README.md  RELEASING_GUIDE.md  pyproject.toml  release_tools.py  setup.py
.github/workflows/: codeql.yml  release.yml  tests.yml
hyperspy_gui_traitsui/: __init__.py  axes.py  buttons.py  hyperspy_extension.yaml  messages.py  microscope_parameters.py  model.py  preferences.py  roi.py  test_import.py  tools.py  utils.py
hyperspy_gui_traitsui/_external/: bounds_editor.py  range_slider.py
hyperspy_gui_traitsui/tests/: test_axes.py  test_import.py  test_model.py  test_tools.py  utils.py
